# Docket_Poetry_test

./: .gitignore  Dockerfile  pyproject.toml
Docket_Poetry_test/: main.py
docker_poetry_test/: functions.py  main.py
